https://lists.gnu.org/archive/html/info-gnu/2021-06/msg00007.html

Given the relocation of GNU and FSF's official IRC channels, as well
as #emacs and various other Emacs-themed channels (see the link below)
to Libera.Chat, IRC-related references in the Emacs repository have
now been updated to point to Libera.Chat.

https://lists.gnu.org/archive/html/info-gnu-emacs/2021-06/msg00000.html


* Incompatible Editing Changes in Emacs 28.1

** 'toggle-truncate-lines' now disables 'visual-line-mode'.
This is for symmetry with 'visual-line-mode', which disables
'truncate-lines'.

** 'electric-indent-mode' now also indents inside strings and comments.
(This only happens when indentation function also supports this.)

To recover the previous behavior you can use:

    (add-hook 'electric-indent-functions
              (lambda (_) (if (nth 8 (syntax-ppss)) 'no-indent)))

** The 'M-o' ('facemenu-keymap') global binding has been removed.
To restore the old binding, say something like:

    (require 'facemenu)
    (define-key global-map "\M-o" 'facemenu-keymap)
    (define-key facemenu-keymap "\es" 'center-line)
    (define-key facemenu-keymap "\eS" 'center-paragraph)

The last two lines are not strictly necessary if you don't care about
having those two commands on the 'M-o' keymap; see the next section.

** The 'M-o M-s' and 'M-o M-S' global bindings have been removed.
Use 'M-x center-line' and 'M-x center-paragraph' instead.  See the
previous section for how to get back the old bindings.  Alternatively,
if you only want these two commands to have the global bindings they
had before, you can add the following to your init file:

    (define-key global-map "\M-o\M-s" 'center-line)
    (define-key global-map "\M-o\M-S" 'center-paragraph)

** The 'M-o M-o' global binding has been removed.
Use 'M-x font-lock-fontify-block' instead, or the new 'C-x x f'
command, which updates the syntax highlighting in the current buffer.
